Revision history for Form::Sensible

NEXT VERSION
		* Reflector allows skipping fields by leaving them out of the field definition

0.20012 2011-02-01
    * BUGFIX FileSelector problem related to basename usage
    * Addition of 'with_trigger' to options processing in Reflector

0.20011 2011-01-09
    * Minor fixes related to Reflector that slipped us by.

0.20010 2011-01-08
    * More comprehensive Select tests
    * More Numbers tests
    * Add 'add_selection' method, for adding new selected options to a Select's value
    * BUGFIX - Correct 'set_selection' to set selection to provided options ONLY
    * Add 'additional_fields' handling to Reflector base class
    * Enhance FileSelector to be able to cope with a different 'full path' than 
      its 'user supplied filename' Catalyst users rejoice
    * BEHAVIOR CHANGE: Reflector base class no longer adds a submit button by default.
      If you want this behavior, you need to use 'additional_fields' going forward, or 
      add the trigger yourself.
    * DOCFIX - A Select field's value should be a value when accepts_multiple is false, and an array 
      when 'accepts_multiple' is true, even when only a single value was selected;
    * BUGFIX - in Number - Default Number regex was broken.
    * DOCFIX - Add note in Number field type indicating that validation is limited to numbers Perl can process directly.
    * BUGFIX - When setting select value when accepts_multiple is turned on, first set_selection
      call fails due to no array to push into.  FIXED.  Thanks Lee.
    * BUGFIX - Integer check regex was broken.  FIXED.  Thanks Lee.
    * BEHAVIOR CHANGE: Regex and coderef validations now takes place in the field's 
      validate() routine rather than in validator module.  This makes $field->validate() 
      behave more predictably by performing all general field validation.

0.20002 2010-08-06
    * Correct typo in Select that causes generic error messages to appear wrong.
    * Add some things to the FAQ
