@@ -2,6 +2,7 @@ Revision history for Form::Sensible
 
 NEXT VERSION
 		* Reflector allows skipping fields by leaving them out of the field definition
+		* added "additional_tt_options" option to Form::Sensible::Renderer::HTML->render() to pass options to Template::Toolkit
 
 0.20012 2011-02-01
     * BUGFIX FileSelector problem related to basename usage
